<resources>
    <string name="app_name">Fiction</string>
    <string name="query_name">Query Name</string>
    <string name="create_query">Create Query</string>
    <string name="update_query">Update Query</string>
    <string name="remove">Remove</string>
    <string name="read_until_here">Read Until Here</string>
    <string name="download_until_here">Download Until Here</string>
    <string name="refresh_until_here">Refresh Until Here</string>
    <string name="open_in_browser">Open In Browser</string>
    <string name="separator">Separator</string>
    <string name="edit_query">Edit Query</string>
    <string name="reorder">Reorder</string>
    <string name="dark">Dark</string>
    <string name="dark_amoled">Dark (AMOLED)</string>
    <string name="theme">Theme</string>
    <string name="settings">Settings</string>
    <string name="open_queries">Open Query Drawer</string>
    <string name="close_queries">Close Query Drawer</string>
    <string name="downloads">Downloads</string>
    <string name="cancel_task">Cancel Task</string>
    <string name="no_downloads">No Downloads</string>
    <string name="update">Update</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="include">Include</string>
    <string name="exclude">Exclude</string>
    <string name="cancel">Cancel</string>
    <string name="filter_tag">Filter Tag</string>
    <string name="no_update_available">No Update available.</string>
    <string name="no_update_available_summary">Click for changelog | Version: %s</string>
    <string name="update_available">Download update</string>
    <string name="update_available_toast">An update is available. You can download it in the settings.</string>
    <string name="cover_image">Cover Image</string>
    <string name="download_covers_wifi">Download Covers on wifi</string>
    <string name="download_covers_data">Download Covers on data</string>
    <string name="offline_mode">Offline Query Browsing</string>
    <string name="rebuild_index">Rebuild Index</string>
    <string name="manage_shelves">Manage Shelves</string>
    <string name="send_to_kindle">Send to Kindle</string>
</resources>
