<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="@string/theme_selection_default"
        android:entries="@array/theme_selection_keys"
        android:entryValues="@array/theme_selection_values"
        android:key="theme"
        android:title="@string/theme" />

    <Preference android:key="update" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="download_cover.wifi"
        android:title="@string/download_covers_wifi" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="download_cover.data"
        android:title="@string/download_covers_data" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="offline_mode"
        android:title="@string/offline_mode" />

    <Preference
            android:key="rebuild_index"
            android:title="@string/rebuild_index" />
</PreferenceScreen>